--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <h1>Cassie's Portfolio</h1>
-    <h2>I'm a Web Developer</h2>
+    <h2>Something about me</h2>
     <hr />
     <a href="./public/movie-ranking.html">My Favorite Movies' Ranking</a>
     <p>
-    <img src="./assets/images/320.jpg" alt="screenshot of website">
+    <img src="./assets/images/YourName.jpg" alt="a movie poster" width="200" height="300">
     </p>
     <hr />
     <a href="./public/about.html">About Me</a>
@@ -20,16 +20,3 @@
 
 </body>
 </html>
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
