--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,12 +1,19 @@
 <h1>The Best Movies According to Angela</h1>
 <h2>My favorite movies of all-time.</h2>
 <hr />
+
+
 <h3>Your Name. (君の名は。)</h3>
 <p>A beautifully animated Japanese film by Makoto Shinkai.</p>
 <p>It tells the story of two teenagers who mysteriously swap bodies, leading to a touching narrative about fate, time, and connection.</p>
+<img src="../assets/images/YourName.jpg" alt="Your Name. poster" width="200" height="300">
+
 <h3>Amélie</h3>
 <p>A whimsical French film about a shy young woman in Paris.</p>
 <p>Through small acts of kindness, she changes the lives of those around her while discovering love and her own happiness.</p>
+<img src="../assets/images/Amelie.jpeg" alt="Amélie poster">
+
 <h3>Gone with the Wind</h3>
 <p>An epic historical romance set during the American Civil War.</p>
 <p>It follows the strong-willed Scarlett O’Hara as she struggles with love, loss, and survival in a time of great upheaval.</p>
+<img src="../assets/images/GoneWithTheWind.jpeg" alt="Amélie poster">
