--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
     <p>
     <img src="./assets/images/YourName.jpg" alt="a movie poster" width="200" height="300">
     </p>
+
+    <a href="./public/book.html">2025 Reading List</a>
+    <p>
+    <img src="./assets/images/33sqd07odvb61.png" alt="bird reading a book" width="192" height="170">
+    </p>
     <hr />
     <a href="./public/about.html">About Me</a>
     <a href="./public/contact.html">Contact Me</a>
 
+    
 </body>
 </html>
